# write-a-scheme

./: flake.nix  hie.yaml  std-lib.scm  write-a-scheme.cabal
src/: Lib.hs  Main.hs
test/: TestSuite.hs
