cabal-version:   3.0
name:            write-a-scheme
version:         0.1.0.0
license:         NONE
author:          Beat
maintainer:      beat@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable write-a-scheme
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
